--- a/pages/legal-page.html
+++ b/pages/legal-page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/legal-page.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="../css/styles.css" >
+    <link rel="stylesheet" href="../css/legal-page.css">
     <script src="../js/scripts.js" defer></script>
     <title>Legal information page</title>
   </head>
@@ -26,6 +26,7 @@
     </header>
     <main>
       <section>
+        <h6>&nbsp;</h6> <!-- Just to make Html validate -->
         <span class="section-label">User agreement</span>
         <div class="document-content">
           <p>
@@ -125,6 +126,7 @@
         </div>
       </section>
       <section>
+        <h6>&nbsp;</h6> <!-- Just to make Html validate -->
         <span class="section-label">Terms of service</span>
         <div class="document-content">
           <p>
@@ -224,6 +226,7 @@
         </div>
       </section>
       <section>
+        <h6>&nbsp;</h6> <!-- Just to make Html validate -->
         <span class="section-label">Terms of use</span>
         <div class="document-content">
           <p>
