--- a/pages/legal-page.html
+++ b/pages/legal-page.html
@@ -225,7 +225,7 @@
           </ol>
         </div>
       </section>
-      <section>
+      <section class="last">
         <h6>&nbsp;</h6> <!-- Just to make Html validate -->
         <span class="section-label">Terms of use</span>
         <div class="document-content">
@@ -324,14 +324,14 @@
             </li>
           </ol>
         </div>
-      </section>
+      </section> 
     </main>
-    <footer id="footer">
+ <footer id="footer">
       <div class="footer-content">
         By clicking the button you agree to both the User Agreement, the Terms
         of Service, and the rules.
         <button class="agree-btn" disabled>I AGREE</button>
       </div>
-    </footer>
+    </footer> 
   </body>
 </html>
